// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VoteProposalForm component should render an empty form to create a vote proposal with validation errors 1`] = `
<div
  className="form-container vote-proposal-form"
  id="proposal-form-1"
>
  <div
    className="pointer right"
  >
    <div
      className="inline"
    />
  </div>
  <div
    className="title"
  >
    <Translate
      number={1}
      value="administration.voteProposals.defineProposal"
    />
  </div>
  <FormControlWithLabel
    helperText=""
    helperUrl=""
    id="proposal-title-1"
    label="Title of the proposal"
    labelAlwaysVisible={false}
    onChange={[Function]}
    required={true}
    type="text"
    validationErrors={
      Array [
        Object {
          "code": "error.required",
          "vars": Object {},
        },
      ]
    }
    value={null}
  />
  <FormControlWithLabel
    helperText=""
    helperUrl=""
    id="proposal-description-1"
    label="Description"
    labelAlwaysVisible={false}
    onChange={[Function]}
    required={true}
    type="rich-text"
    value={null}
  />
  <FormGroup
    bsClass="form-group"
    validationState={null}
  >
    Immutable.List []
    Immutable.List []
  </FormGroup>
  <div
    className="separator"
  />
</div>
`;

exports[`VoteProposalForm component should render an empty form to create a vote proposal without any checkbox below 1`] = `
<div
  className="form-container vote-proposal-form"
  id="proposal-form-1"
>
  <div
    className="pointer right"
  >
    <div
      className="inline"
    />
  </div>
  <div
    className="title"
  >
    <Translate
      number={1}
      value="administration.voteProposals.defineProposal"
    />
  </div>
  <FormControlWithLabel
    helperText=""
    helperUrl=""
    id="proposal-title-1"
    label="Title of the proposal"
    labelAlwaysVisible={false}
    onChange={[Function]}
    required={true}
    type="text"
    value={null}
  />
  <FormControlWithLabel
    helperText=""
    helperUrl=""
    id="proposal-description-1"
    label="Description"
    labelAlwaysVisible={false}
    onChange={[Function]}
    required={true}
    type="rich-text"
    value={null}
  />
  <FormGroup
    bsClass="form-group"
    validationState={null}
  >
    Immutable.List []
    Immutable.List []
  </FormGroup>
  <div
    className="separator"
  />
</div>
`;
